# Atividade-Avaliativa-2

./: README.md  database.db  pyproject.toml  segundo_passo_de_desenvolvimento.txt
app/: main.py  models.py  routes.py  schemas.py
